set specific height for footer logo to prevent stretching

--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,7 @@ footer{
 }
 #logo-footer{
     width: 100px;
+    height: 72.86;
     margin: 10px;
 }
 footer p{
